UI bug fixes and scroller shifting content issue solved.

--- a/client/TM_client/static/index.css
+++ b/client/TM_client/static/index.css
@@ -6,10 +6,10 @@ body {
 
 }
 
-html {
+body {
   overflow-x: hidden;
-  margin-right: calc(-1 * (100vw - 100%));
 }
+
 
 .glass {
   backdrop-filter: blur(7.5px) saturate(180%);
